--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -1,9 +1,72 @@
-<h1>Eventos do components</h1>
+<h2>Eventos</h2>
+<hr />
 
-
-
-<div *ngFor="let evento of eventos">
-  <p><b> Tema:</b>{{ evento.tema}}</p>
-  <p><b> Local: </b> {{evento.local}}</p>
-  <hr>
+<div action="" class="form-inline">
+  <div class="form-group mb-2">
+    <label class="mr-2">Filtro: </label>
+    <input
+      type="text"
+      class="form-control mr-2"
+      placeholder="buscar"
+      [(ngModel)]="filtroLista"
+    />
+  </div>
 </div>
+
+<!-- <h3>Filtro: {{ filtroLista }}</h3> -->
+<table class="table table-striped">
+  <thead class="thead-dark">
+    <tr>
+      <th>
+        <button
+          type="button"
+          class="btn btn-outline-light btn-sm"
+          Mostar
+          (click)="ocultarImagem()"
+        >
+          {{ !mostrarImagem ? "Ocultar" : "Exibir" }}
+        </button>
+      </th>
+      <th>#</th>
+      <th>Tema</th>
+      <th>Local</th>
+      <th>Data</th>
+      <th>Qtd Pessoas</th>
+      <th>Lote</th>
+      <th>Opções</th>
+    </tr>
+  </thead>
+  <tbody *ngIf="eventos && eventos.length">
+    <tr *ngFor="let evento of eventosFiltrados">
+      <th>
+        <img
+          [collapse]="mostrarImagem"
+          [isAnimated]="true"
+          src="/assets/{{ evento.imagemURL }}"
+          width="100px"
+          margin="2"
+        />
+      </th>
+      <th>{{ evento.eventoId }}</th>
+      <th>{{ evento.tema }}</th>
+      <th>{{ evento.local }}</th>
+      <th>{{ evento.dataEvento }}</th>
+      <th>{{ evento.qtdPessoas }}</th>
+      <th>{{ evento.lote }}</th>
+      <th>
+        <button type="button" class="btn btn-primary btn-sm mr-2">
+          Editar
+        </button>
+        <button type="button" class="btn btn-danger btn-sm">Excluir</button>
+      </th>
+    </tr>
+  </tbody>
+
+  <tfoot *ngIf="!eventos.length">
+    <tr>
+      <td colspan="8" class="text-center">
+        <h4>Nenhum evento encontrado!</h4>
+      </td>
+    </tr>
+  </tfoot>
+</table>
